fix datepickers being hidden by fixed elements

--- a/src/app/components/nav/nav.component.scss
+++ b/src/app/components/nav/nav.component.scss
@@ -137,7 +137,7 @@
     width: 100%;
     height: $small-nav-height;
     justify-content: initial;
-    z-index: 9999;
+    z-index: 70;
 
     .main {
       .banner {
