--- a/src/app/features/tracker/components/timer/timer.component.scss
+++ b/src/app/features/tracker/components/timer/timer.component.scss
@@ -8,7 +8,7 @@
   padding: 0px 10px;
   position: fixed;
   width: $content-width;
-  z-index: 9999;
+  z-index: 70;
 
   .display-element {
     font-size: $base-font-size;
